tests/good/read_int.xprshn
int a!
a = 1!
print a!
a = 999!
print 999!
