tests/compile_error/missing_excl.xprshn
// Compile error: missing excl
int a!
a = 5
print a! 